--- a/package.json
+++ b/package.json
@@ -55,5 +55,5 @@
       "last 1 safari version"
     ]
   }, 
-  "homepage": "https://yelinkimm.github.io/hangman/"
+  "homepage": "https://yelinkimm.github.io/hangman.github.io/"
 }
