--- a/package.json
+++ b/package.json
@@ -16,24 +16,26 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^9.0.4",
+    "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.5.1",
     "gh-pages": "^6.1.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.5.2",
     "typescript": "^4.4.2",
     "uuid": "^9.0.1",
+    "vite": "^5.0.11",
+    "vite-tsconfig-paths": "^4.2.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "test": "vite test",
+    "eject": "vite eject",
     "deploy": "gh-pages -d build",
     "predeploy": "yarn run build"
   },
@@ -54,6 +56,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, 
+  },
   "homepage": "https://yelinkimm.github.io/hangman.github.io/"
 }
