--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
+    "preview": "vite preview",
     "test": "vite test",
     "eject": "vite eject",
-    "deploy": "gh-pages -d build",
-    "predeploy": "yarn run build"
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -57,5 +58,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://yelinkimm.github.io/hangman.github.io/"
+  "homepage": "httpsa://yelinkimm.github.io/hangman.github.io/"
 }
