Modify homepage name

--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "httpsa://yelinkimm.github.io/hangman.github.io/"
+  "homepage": "httpsa://yelinkimm.github.io/hangman/"
 }
