--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hangman",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -38,7 +38,8 @@
     "test": "vite test",
     "eject": "vite eject",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "dev": "vite"
   },
   "eslintConfig": {
     "extends": [
