--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PUBLIC_URL=https://yelinkimm.github.io/hangman.github.io/
+# PUBLIC_URL=https://yelinkimm.github.io/hangman.github.io/
+PUBLIC_URL=.
